Works title too large, makes the site buggy when screen is very thin, this is the fix.

--- a/css/freelancer.scss
+++ b/css/freelancer.scss
@@ -153,7 +153,7 @@ nav .container {
   }
 
   .navbar-header {
-    width: 16%;
+    width: 15%;
   }
 
   .navbar-fixed-top .navbar-brand img {
@@ -168,7 +168,7 @@ nav .container {
 }
 @media(min-width:1250px) {
   .navbar-header {
-    width: 19%;
+    width: 18%;
   }
 
   .navbar-fixed-top .navbar-brand img {
@@ -177,7 +177,7 @@ nav .container {
 }
 @media(min-width:1300px) {
   .navbar-header {
-    width: 22%;
+    width: 21%;
   }
 
   .navbar-fixed-top .navbar-brand img {
@@ -190,7 +190,7 @@ nav .container {
   }
 
   .navbar-header {
-    width: 19%;
+    width: 18%;
   }
 
   .navbar-fixed-top .navbar-brand img {
